crates/backyard-parser/tests/snapshots/attribute__multiple_items.snap
---
source: crates/backyard-parser/tests/attribute.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: class
    inheritance: ~
    name:
      node_type: identifier
      name:
        - 65
      loc:
        start:
          line: 2
          column: 6
          offset: 31
        end:
          line: 2
          column: 7
          offset: 32
      leadings: ~
      trailings: ~
    extends: ~
    implements: []
    body:
      node_type: block
      statements: []
      loc:
        start:
          line: 2
          column: 8
          offset: 33
        end:
          line: 3
          column: 0
          offset: 35
      leadings: ~
      trailings: ~
    is_readonly: false
    loc:
      start:
        line: 2
        column: 0
        offset: 25
      end:
        line: 3
        column: 0
        offset: 35
    leadings:
      - node_type: attribute
        items:
          - node_type: attribute_item
            name:
              - 65
              - 116
              - 116
              - 114
            arguments:
              - node_type: argument
                name: ~
                value:
                  node_type: number
                  value:
                    - 49
                    - 50
                    - 51
                  loc:
                    start:
                      line: 1
                      column: 7
                      offset: 7
                    end:
                      line: 1
                      column: 7
                      offset: 7
                  leadings: ~
                  trailings: ~
                loc:
                  start:
                    line: 1
                    column: 7
                    offset: 7
                  end:
                    line: 1
                    column: 7
                    offset: 7
                leadings: ~
                trailings: ~
            loc:
              start:
                line: 1
                column: 2
                offset: 2
              end:
                line: 1
                column: 10
                offset: 10
            leadings: ~
            trailings: ~
          - node_type: attribute_item
            name:
              - 92
              - 65
              - 116
              - 116
              - 114
            arguments:
              - node_type: argument
                name: ~
                value:
                  node_type: number
                  value:
                    - 49
                    - 50
                    - 51
                  loc:
                    start:
                      line: 1
                      column: 19
                      offset: 19
                    end:
                      line: 1
                      column: 19
                      offset: 19
                  leadings: ~
                  trailings: ~
                loc:
                  start:
                    line: 1
                    column: 19
                    offset: 19
                  end:
                    line: 1
                    column: 19
                    offset: 19
                leadings: ~
                trailings: ~
            loc:
              start:
                line: 1
                column: 13
                offset: 13
              end:
                line: 1
                column: 22
                offset: 22
            leadings: ~
            trailings: ~
        loc:
          start:
            line: 1
            column: 0
            offset: 0
          end:
            line: 3
            column: 0
            offset: 35
        leadings: ~
        trailings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 3
    column: 0
    offset: 35
leadings: ~
trailings: ~
