crates/backyard-parser/tests/snapshots/attribute__with_argument.snap
---
source: crates/backyard-parser/tests/attribute.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: class
    inheritance: ~
    name:
      node_type: identifier
      name: A
      loc:
        start:
          line: 2
          column: 6
          offset: 19
        end:
          line: 2
          column: 7
          offset: 20
      leadings: ~
      trailings: ~
    extends: ~
    implements: []
    body:
      node_type: block
      statements: []
      loc:
        start:
          line: 2
          column: 8
          offset: 21
        end:
          line: 3
          column: 0
          offset: 23
      leadings: ~
      trailings: ~
    is_readonly: false
    loc:
      start:
        line: 2
        column: 0
        offset: 13
      end:
        line: 3
        column: 0
        offset: 23
    leadings:
      - node_type: attribute
        items:
          - node_type: attribute_item
            name: Attr
            arguments:
              - node_type: call_argument
                name: ~
                value:
                  node_type: number
                  value: "123"
                  loc:
                    start:
                      line: 1
                      column: 7
                      offset: 7
                    end:
                      line: 1
                      column: 7
                      offset: 7
                  leadings: ~
                  trailings: ~
                loc:
                  start:
                    line: 1
                    column: 7
                    offset: 7
                  end:
                    line: 1
                    column: 7
                    offset: 7
                leadings: ~
                trailings: ~
            loc:
              start:
                line: 1
                column: 2
                offset: 2
              end:
                line: 1
                column: 10
                offset: 10
            leadings: ~
            trailings: ~
        loc:
          start:
            line: 1
            column: 0
            offset: 0
          end:
            line: 3
            column: 0
            offset: 23
        leadings: ~
        trailings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 3
    column: 0
    offset: 23
leadings: ~
trailings: ~
